fix: dark mode

--- a/public/static/defaultsite/mobile-v2/css/styles-maverick.css
+++ b/public/static/defaultsite/mobile-v2/css/styles-maverick.css
@@ -25,6 +25,11 @@ html,
 body {
     height: 100%;
 }
+
+.dark body {
+    background-color: var(--color-black);
+}
+
 img {
     color: transparent;
     vertical-align: middle;
